cif/org.eclipse.escet.cif.tests/tests/event_based/automaton_abstraction/empty_automaton.run.err
WARNING: File "event_based/automaton_abstraction/empty_automaton.cif": Semantic warning at line 14, column 7: Automaton "p" has no initial location.
ERROR: Failed to compute automaton abstraction for CIF file "event_based/automaton_abstraction/empty_automaton.cif".
CAUSE: CIF automaton abstraction tool failed due to unsatisfied preconditions:

  ----------------------------------------------
  (1/1) Automaton has only non-marked locations.
  ----------------------------------------------
   * In the top-level scope of the specification:
     - plant automaton p:
                       ^
